content/_generated-doc/3.2/config/quarkus-micrometer-config-group-config-micrometer-config-export-config.adoc

:summaryTableId: quarkus-micrometer-config-group-config-micrometer-config-export-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-micrometer-config-group-config-micrometer-config-export-config_configuration]]link:#quarkus-micrometer-config-group-config-micrometer-config-export-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-json-enabled]]`link:#quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-json-enabled[quarkus.micrometer.export.json.enabled]`


[.description]
--
Support for export to JSON format. Off by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_JSON_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_JSON_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-json-path]]`link:#quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-json-path[quarkus.micrometer.export.json.path]`


[.description]
--
The path for the JSON metrics endpoint. The default value is `metrics`. By default, this value will be resolved as a path relative to `$++{++quarkus.http.non-application-root-path++}++`. If the management interface is enabled, the value will be resolved as a path relative to `$++{++quarkus.management.root-path++}++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_JSON_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_JSON_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`metrics`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-json-buffer-length]]`link:#quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-json-buffer-length[quarkus.micrometer.export.json.buffer-length]`


[.description]
--
Statistics like max, percentiles, and histogram counts decay over time to give greater weight to recent samples. Samples are accumulated to such statistics in ring buffers which rotate after the expiry, with this buffer length.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_JSON_BUFFER_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_JSON_BUFFER_LENGTH+++`
endif::add-copy-button-to-env-var[]
--|int 
|`3`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-json-expiry]]`link:#quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-json-expiry[quarkus.micrometer.export.json.expiry]`


[.description]
--
Statistics like max, percentiles, and histogram counts decay over time to give greater weight to recent samples. Samples are accumulated to such statistics in ring buffers which rotate after this expiry, with a particular buffer length.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_JSON_EXPIRY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_JSON_EXPIRY+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`P3D`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-prometheus-enabled]]`link:#quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-prometheus-enabled[quarkus.micrometer.export.prometheus.enabled]`


[.description]
--
Support for export to Prometheus.

Support for Prometheus will be enabled if Micrometer support is enabled, the PrometheusMeterRegistry is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.registry-enabled-default` is true.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-prometheus-path]]`link:#quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-prometheus-path[quarkus.micrometer.export.prometheus.path]`


[.description]
--
The path for the prometheus metrics endpoint (produces text/plain). The default value is
`metrics` and is resolved relative to the non-application endpoint (`q`), e.g.
`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}/metrics`.
If an absolute path is specified (`/metrics`), the prometheus endpoint will be served
from the configured path.

If the management interface is enabled, the value will be resolved as a path relative to
`${quarkus.management.root-path}` (`q` by default), e.g.
`http://${quarkus.management.host}:${quarkus.management.port}/${quarkus.management.root-path}/metrics`.
If an absolute path is specified (`/metrics`), the prometheus endpoint will be served from the configured path, e.g.
`http://${quarkus.management.host}:${quarkus.management.port}/metrics`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`metrics`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-prometheus-default-registry]]`link:#quarkus-micrometer-config-group-config-micrometer-config-export-config_quarkus-micrometer-export-prometheus-default-registry[quarkus.micrometer.export.prometheus.default-registry]`


[.description]
--
By default, this extension will create a Prometheus MeterRegistry instance.

Use this attribute to veto the creation of the default Prometheus MeterRegistry.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_DEFAULT_REGISTRY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MICROMETER_EXPORT_PROMETHEUS_DEFAULT_REGISTRY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
